# buildit

./: .gitignore  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_EXECUTION.md  CODE_OF_CONDUCT.md  COMPLETED_ROADMAP.md  CONTRIBUTING.md  CRDT_COLLABORATION_IMPLEMENTATION.md  E2E_CONVERSATIONS_TEST_SUMMARY.md  ENCRYPTION_STRATEGY.md  EPIC_21_USER_STORIES.md  EPIC_28_5_COMPLETE.md  EPIC_47_COMPLETION_SUMMARY.md  EXPERT_REVIEW_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MICROBLOGGING_E2E_TESTS_SUMMARY.md  MISSING_FEATURES.md  NATIVE_APPS.md  NEXT_ROADMAP.md  NEXT_STEPS.md  PRIVACY.md  PRODUCT_EXEC_SUMMARY.md  PRODUCT_INDEX.md  PRODUCT_ROADMAP.md  PROGRESS.md  PROMPT.md  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  SOCIAL_FEATURES_CHECKLIST.md  SOCIAL_FEATURES_COMPARISON.md  SOCIAL_FEATURES_EXECUTIVE_SUMMARY.md  SOCIAL_FEATURES_README.md  SOCIAL_FEATURES_STRATEGY.md  SPECTRUM_FEATURE_RECOMMENDATIONS.md  bun.lockb  cliff.toml  (+9 more)
.claude/: settings.json  subagents.yml
clients/desktop/: CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  tauri.conf.json
clients/desktop/capabilities/: call-windows.json  default.json
clients/desktop/src/: lib.rs  main.rs  tray.rs
clients/desktop/src/ble/: chunk.rs  manager.rs  mesh.rs  mod.rs
clients/desktop/src/commands/: crypto_commands.rs  db_commands.rs  mod.rs  nostr_commands.rs  storage_commands.rs
clients/desktop/src/crypto/: mod.rs
clients/desktop/src/db/: mod.rs  pool.rs  schema.rs
clients/desktop/src/db/migrations/: 001_core_tables.sql  002_module_tables.sql  003_device_offline.sql
clients/desktop/src/nostr/: cert_pinning.rs  mod.rs  relay.rs  types.rs
clients/desktop/src/windows/: call_window.rs  mod.rs
clients/desktop/tests/: ble_chunk_tests.rs
dev-dist/: sw.js
docs/: ACCESSIBILITY_AUDIT_REPORT.md  CIRCLES_OF_TRUST.md  CIRCLES_OF_TRUST_EXPANDED.md  CIRCLES_OF_TRUST_PROMPT.md  CONTRIBUTING_TRANSLATIONS.md  DEPENDENCIES.md  DESIGN_PHILOSOPHY.md  DESKTOP_PARITY_REPORT.md  EPIC_41_42_43_MESSAGING_OVERHAUL.md  GIT_WORKFLOW.md  KEY_MANAGEMENT.md  NEW_EPICS_SUMMARY.md  PENTEST_SCOPE.md  README.md  SCHEMA_PARITY_AUDIT.md  SECURITY.md  SECURITY_AUDIT.md  TECH_DEBT.md  THREAT_MODEL.md  UX_MESSAGING_ANALYSIS.md  VISION.md  (+3 more)
(+2591 files in other folders)
